Load early on startup and disable floodgate startup registering

--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -1,5 +1,6 @@
 name: SkinsRestorer
 main: net.skinsrestorer.bukkit.SRBukkitBootstrap
+load: STARTUP
 version: ${version}
 description: ${description}
 website: https://skinsrestorer.net/
